--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.11.1",
     "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.5",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
