Add Vercel deployment checklist and environment variable setup; create .vercelignore for development files

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,11 @@
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ]
 }
