--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test:ui": "vitest --ui",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate deploy",
-    "db:generate": "prisma generate"
+    "db:migrate:dev": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:reset": "prisma migrate reset",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
