--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.11.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/formidable": "^3.4.5",
+    "@types/next-auth": "^3.15.0",
     "@types/pg": "^8.15.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
