Configure Cloudflare Pages deployment with D1 database

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# cloudflare
+.dev.vars
+.wrangler
+wrangler.toml.backup
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
