--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "cf:dev": "wrangler pages dev -- pnpm dev",
+    "cf:build": "prisma generate && next build",
+    "cf:deploy": "wrangler pages deploy .vercel/output/static --project-name=audio-text-search",
+    "cf:deploy:prod": "pnpm run cf:build && pnpm run cf:deploy",
+    "d1:setup": "./scripts/setup-d1.sh",
+    "d1:local": "wrangler d1 execute audio-text-search-db --local",
+    "d1:remote": "wrangler d1 execute audio-text-search-db --remote",
+    "d1:backup": "wrangler d1 export audio-text-search-db --remote --output=backup-$(date +%Y%m%d-%H%M%S).sql"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-libsql": "^6.18.0",
     "@prisma/client": "^6.11.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/formidable": "^3.4.5",
@@ -36,6 +46,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251014.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
@@ -52,6 +63,7 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wrangler": "^4.45.0"
   }
 }
